--- a/app/src/main/res/layout/item_donut.xml
+++ b/app/src/main/res/layout/item_donut.xml
@@ -28,8 +28,8 @@
 
         <TextView
             android:id="@+id/txtName"
-            android:layout_width="111dp"
-            android:layout_height="37dp"
+            android:layout_width="137dp"
+            android:layout_height="43dp"
             android:layout_marginStart="20dp"
             android:text="TextView"
             android:textColor="#000000"
@@ -64,9 +64,11 @@
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
+            android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/txtDescription"
             app:srcCompat="@drawable/plus_button" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
