--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -5,30 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/lstView"
-        android:layout_width="410dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="413dp"
         android:layout_height="264dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="105dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
             android:layout_marginTop="16dp"
             android:text="Welcome Julia"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,66 +27,64 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="175dp"
+            android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="68dp"
+            android:layout_marginTop="28dp"
             android:text="Choice your best food"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <EditText
             android:id="@+id/txtSearch"
             android:layout_width="221dp"
             android:layout_height="59dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/border"
             android:ems="10"
             android:hint="Search food"
             android:inputType="textPersonName"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <Button
             android:id="@+id/btnDonut"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="28dp"
             android:text="Donut"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtSearch"
-            app:layout_constraintVertical_bias="0.136" />
+            app:layout_constraintStart_toStartOf="@+id/txtSearch"
+            app:layout_constraintTop_toBottomOf="@+id/txtSearch" />
 
         <Button
             android:id="@+id/btnPinkDonut"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="124dp"
-            android:layout_marginTop="28dp"
+            android:layout_width="127dp"
+            android:layout_height="49dp"
+            android:layout_marginStart="8dp"
             android:backgroundTint="#A6A6A6"
             android:text="Pink Donut"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtSearch"
-            app:layout_constraintVertical_bias="0.136" />
+            app:layout_constraintBottom_toBottomOf="@+id/btnDonut"
+            app:layout_constraintStart_toEndOf="@+id/btnDonut" />
 
         <Button
             android:id="@+id/btnFloating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="288dp"
+            android:layout_width="118dp"
+            android:layout_height="46dp"
+            android:layout_marginStart="12dp"
             android:backgroundTint="#A6A6A6"
             android:text="Floating"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtSearch"
-            app:layout_constraintVertical_bias="0.783" />
+            app:layout_constraintBottom_toBottomOf="@+id/btnPinkDonut"
+            app:layout_constraintStart_toEndOf="@+id/btnPinkDonut" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ListView
+        android:id="@+id/lstView"
+        android:layout_width="0dp"
+        android:layout_height="467dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        tools:layout_editor_absoluteX="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
